--- a/css/style.css
+++ b/css/style.css
@@ -182,8 +182,6 @@ img.grayscale {
 .callout {
   color: #212121;
   padding-top:7%;
-  height: 100%;
-  width: 100%;
   background: #ffffff url("http://i.imgur.com/tUipEz4.png") repeat center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -224,10 +222,6 @@ footer {
 }
 
 /* -- login and register modal inputs --*/
-ul{
-	list-style: none;
-	padding-left: 0;
-}
 
 .modal-content{
 	  background: #f8f8f8 url("http://i.imgur.com/tUipEz4.png") repeat center fixed; 
@@ -276,8 +270,22 @@ label{
 	border-right: 2px black solid;
 }
 
+.noListStyle{
+	list-style: none;
+}
+
 #contact{
 	width: 70%;
+}
+
+@media only screen and (max-width: 700px) {
+    #contact {
+        width: 95%;
+    }
+
+    #sub {
+    	margin-left: 0%;
+    }
 }
 
 #sub{
@@ -308,140 +316,6 @@ b{
 	font-family:'Voltaire',Arial,sans-serif;
 	font-size: 1.4em;
 }
-
-/*
-.char1{
-	position: relative;
-	display: inline-block;
-	vertical-align: top;
-	-webkit-transform: rotate(-11deg);
-	transform: rotate(-11deg);
-	margin-left: -10px;
-	top: 13px;
-	opacity: 0.5;
-}
-
-.char2{
-	position: relative;
-	display: inline-block;
-	vertical-align: top;
-	-webkit-transform: rotate(-10deg);
-	transform: rotate(-10deg);
-	margin-left: 8px;
-	top: 4px;
-	opacity: 1;
-}
-
-.char3{
-	position: relative;
-	display: inline-block;
-	vertical-align: top;
-	-webkit-transform: rotate(-8deg);
-	transform: rotate(-8deg);
-	margin-left: 11px;
-	top: -2px;
-	opacity: 1;
-}
-
-.char4{
-	position: relative;
-	display: inline-block;
-	vertical-align: top;
-	-webkit-transform: rotate(-6deg);
-	transform: rotate(-6deg);
-	margin-left: 13px;
-	top: -8px;
-	opacity: 1;
-}
-
-.char5{
-	position: relative;
-	display: inline-block;
-	vertical-align: top;
-	-webkit-transform: rotate(-5deg);
-	transform: rotate(-5deg);
-	margin-left: 11px;
-	top: -13px;
-	opacity: 1;
-}
-
-.char6{
-	position: relative;
-	display: inline-block;
-	vertical-align: top;
-	-webkit-transform: rotate(0deg);
-	transform: rotate(0deg);
-	margin-left: 11px;
-	top: -15px;
-	opacity: 1;
-}
-
-.char7{
-	position: relative;
-	display: inline-block;
-	vertical-align: top;
-	margin-left: 12px;
-	top: -14px;												#Michael Perez name styling.
-	-webkit-transform: rotate(0deg);
-	transform: rotate(0deg);
-	opacity: 1;
-}
-
-.char9{
-	position: relative;
-	display: inline-block;
-	vertical-align: top;
-	-webkit-transform: rotate(1deg);
-	transform: rotate(1deg);
-	margin-left: 50px;
-	top: -13px;
-	opacity: 1;
-}
-
-.char10{
-	position: relative;
-	display: inline-block;
-	vertical-align: top;
-	-webkit-transform: rotate(5deg);
-	transform: rotate(5deg);
-	margin-left: 6px;
-	top: -10px;
-	opacity: 1;
-}
-
-.char11{
-	position: relative;
-	display: inline-block;
-	vertical-align: top;
-	margin-left: 10px;
-	top: -3px;
-	-webkit-transform: rotate(7deg);
-	transform: rotate(7deg);
-	opacity: 1;
-}
-
-.char12{
-	position: relative;
-	display: inline-block;
-	vertical-align: top;
-	-webkit-transform: rotate(7deg);
-	transform: rotate(7deg);
-	margin-left: 9px;
-	top: 3px;
-	opacity: 1;
-}
-
-.char13{
-	position: relative;
-	display: inline-block;
-	vertical-align: top;
-	-webkit-transform: rotate(10deg);
-	transform: rotate(10deg);
-	margin-left: 13px;
-	top: 14px;
-	opacity: 1;
-}
-*/
 
 .hi{
 	color:#fff;
@@ -478,10 +352,6 @@ b{
 	border-top: 3px #920f18 solid;
 }
 
-#mike{
-	float: right;
-}
-
 .lead{
 	color: #920f18;
 }
@@ -514,10 +384,6 @@ p{
 }
 
 .facts{
-	display: inline-block;
-	position: inherit;
-	top: 60px;
-	right: 250px;
 	list-style-type:circle;
 	font-size: 1.5em;
 	text-align: left;
@@ -570,6 +436,10 @@ form h3{
 	display: inline-block;
 }
 
+.elPic{
+	max-width: 100%;
+}
+
 #proImg{
 	position: relative;
 	left: 1px;
@@ -577,5 +447,9 @@ form h3{
 
 #logout{
 	margin-top: 50px;
+}
+
+footer{
+	text-align: center;
 }
 /*--- RESULTS PAGE END ---*/
