--- a/css/style.css
+++ b/css/style.css
@@ -285,7 +285,7 @@ label{
 
 #sub{
 	margin: 5%;
-	margin-left: 39%;
+	margin-left: 34%;
 	background: #920f18;
 	font-size: 2em;
 	padding: 10px 50px;
@@ -388,6 +388,11 @@ p{
 .proDesc{
 	text-align: left;
 	margin-top: 12%;
+}
+
+.featurette-item p {
+	line-height: 1.5;
+	margin-top: 7%;
 }
 
 .proTwo{
