--- a/css/style.css
+++ b/css/style.css
@@ -372,34 +372,13 @@ p{
 	margin-top: 0;
 }
 
-.web{
-	border: 2px black solid;
-	border-radius: 3%;
-}
-
 .proName{
 	color: #920f18;
-}
-
-.facts{
-	list-style-type:circle;
-	font-size: 1.5em;
-	text-align: left;
-	font-family: 'Alegreya', serif;
-}
-
-.proDesc{
-	text-align: left;
-	margin-top: 12%;
 }
 
 .featurette-item p {
 	line-height: 1.5;
 	margin-top: 7%;
-}
-
-.proTwo{
-	margin-top: 5%;
 }
 
 /*--- My Process END---*/
@@ -439,8 +418,198 @@ form h3{
 	display: inline-block;
 }
 
+/*proTwo{
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}*/
+
+.project-container {
+	margin-bottom: 30px;
+}
+
+.web {
+	border: 3px #e4e4e4 solid;
+	border-radius: 10px;
+	background-color: #e4e4e4;
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+	display: flex;
+    flex-direction: column;
+}
+
+.web:hover {
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
 .elPic{
 	max-width: 100%;
+	border-bottom-right-radius: 10px;
+  	border-bottom-left-radius: 10px;
+}
+
+/*	HOVER OVER IMAGE EFFECT   */
+.img-container {
+  position: relative;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #920f18;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.img-container:hover .overlay {
+  height: 100%;
+}
+
+.text {
+  /*white-space: nowrap;*/ 
+  color: white;
+  font-size: 20px;
+  position: relative;
+  overflow: hidden;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+.proDesc{
+	text-align: center;
+	margin-top: 5%;
+	padding: 0 15px;
+	line-height: 1.5;
+	font-size: 1em;
+}
+
+.facts{
+	list-style-type: none;
+	text-align: center;
+	padding-left: 0;
+	font-family: 'Alegreya Sans SC', sans-serif;
+}
+
+.github {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+}
+
+.github > i {
+	font-size: 2em;
+}
+
+.github > a {
+	font-size: .9em;
+}
+/*	HOVER OVER IMAGE EFFECT END */
+
+
+.browser {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: flex-start;
+	align-self: flex-start;
+	padding: 0 10px;
+	width: 100%;
+	margin: 10px 0 15px 0;
+}
+
+.browser-arrows {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	align-self: center;
+	font-size: 3.2em;
+	color: #9aa3a8;
+	width: 50px;
+	color: #9aa3a8;
+}
+
+div.browser > span.url-bar {
+	background-color: white;
+	border-radius: 10px;	
+	display: flex;
+    justify-content: flex-start;
+    align-items: center;
+	text-align: left;
+	padding: 5px 20px;
+	margin: 0 15px;
+	font-size: 1.5em;
+	width: 90%;
+}
+
+.web > span {
+	display: flex;
+    justify-content: flex-start;
+    align-items: center;
+	text-align: left;
+	padding: 5px 20px;
+	margin: 15px;
+	border: 2px rgba(128, 128, 128, 0.24) solid;
+	border-radius: 5px;
+	font-size: 1.5em
+}
+
+.web > img {
+	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 10px;
+}
+
+.url-bar > i, .window-circle > i {
+	color: #9aa3a8;
+	margin-right: 10px;
+	font-size: 1.2em;
+}
+
+.web > span > a {
+	cursor: pointer;
+	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.web > span.window-circle {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: flex-start;
+	padding: 10px;
+	border: none;
+	font-size: 1em;
+	margin: 0;
+}
+
+.window-circle > i:nth-child(1) {
+	color: #ff7573;
+}
+
+.window-circle > i:nth-child(2) {
+	color: #fdff7f;
+}
+
+.window-circle > i:nth-child(3) {
+	color: #88ff78;
+}
+
+.project-information {
+	margin-top: 10px;
+	display: none;
+}
+
+.project-information > ul {
+	list-style: none;
 }
 
 #proImg{
@@ -456,6 +625,18 @@ footer{
 	text-align: center;
 }
 /*--- RESULTS PAGE END ---*/
+
+@media only screen and (max-width: 991px) {
+	.project-information {
+		margin-top: 0%;
+	}
+	.proTwo {
+		margin-bottom: 5%;
+	}
+	.proDesc {
+		margin-top: 0%;
+	}
+}
 
 @media only screen and (max-width: 700px) {
     #contact {
