--- a/css/style.css
+++ b/css/style.css
@@ -628,6 +628,37 @@ footer{
 .navbar-toggle > .icon-bar {
 	background-color: white;
 }
+
+.social-media {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	font-size: 2em;
+}
+
+.social-media > a {
+	color: gray;
+	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.social-media > a:nth-child(1):hover {
+	color: #3d3d3d;
+}
+
+.social-media > a:nth-child(2) {
+	margin: 5px 10px;
+}
+
+.social-media > a:nth-child(2):hover {
+	color: #3B5998;
+}
+
+.social-media > a:nth-child(3):hover {
+	color: #cd486b;
+}
 /*--- RESULTS PAGE END ---*/
 
 @media only screen and (max-width: 991px) {
